# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[package]
name = "redis-starter-rust"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"

# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[dependencies]
bytes = "1.10.1"                                            # helps manage buffers
regex = "1.11.1"                                            # async networking
anyhow = "1.0.98"                                           # error handling
thiserror = "2.0.12"                                        # error handling
futures = "0.3.31"                                          # async programming
tokio = { version = "1.45.0", features = ["full"] }
clap = { version = "4.5.37", features = ["env", "derive"] }
chrono = "0.4.41"
rand = "0.9.1"
